[package]
name = "almanac10"
version = "0.0.1"
edition = "2021"

[dependencies]
log = "0.4"
pixels = "0.9"
winit = "0.27.3"
winit_input_helper = "0.13"
cgmath = "0.18.0"

[lib]
path = "src/shared/shared.rs" 

[[bin]]
name = "almanacx"
path = "src/almanacx/almanacx.rs" 

[[bin]]
name = "quill"
path = "src/quill/quill.rs"