[package]
name = "common"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
pixels.workspace = true
winit.workspace = true
winit_input_helper.workspace = true
cgmath.workspace = true
